<resources>
    <string name="app_name">Spoti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logIn">Log In</string>
    <string name="remember">Remember me</string>
    <string name="or">OR</string>
    <string name="log_in_with_facebook">Log In With Facebook</string>
    <string name="register">Don´t have an account?\n</string>
    <string name="signup">SignUp</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">Create your new password!</string>
    <string name="facebook_username">Facebook Username</string>
    <string name="facebook_password">Facebook password</string>
    <string name="sign_up">Sign Up</string>
</resources>